--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"karma": "4.4.1",
 		"karma-chrome-launcher": "3.1.0",
 		"karma-cljs-test": "0.1.0",
-		"karma-junit-reporter": "2.0.1",
+		"karma-verbose-reporter": "0.0.6",
 		"shadow-cljs": "2.9.3"
 	}
 }
