--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,35 @@
 {
-    "calva.replConnectSequences": [
-        {
-            "name": "Leiningen -> shadow-cljs",
-            "projectType": "lein-shadow",
-            "cljsType": "shadow-cljs",
-            "menuSelections": {
-                "leinAlias": null,
-                "leinProfiles": [
-                    "dev"
-                ],
-                "cljsLaunchBuilds": [
-                    "app"
-                ],
-                "cljsDefaultBuild": "app"
-            }
-        }
-    ]
+  // https://calva.io/customizing/
+  "calva.prettyPrintingOptions": {
+    "enabled": true
+  },
+  "editor.formatOnSave": false,
+  // The extension pflannery.vscode-versionlens works only if the file type
+  // associated to package.json is json, not jsonc.
+  // For tsconfig files we can use jsonc without issues.
+  // https://marketplace.visualstudio.com/items?itemName=pflannery.vscode-versionlens
+  "files.associations": {
+    "*.json": "json",
+    "tsconfig*.json": "jsonc"
+  },
+  // hide these folders from the VS Code side panel (explorer)
+  "files.exclude": {
+    ".calva/": true,
+    ".clj-kondo/": true,
+    ".cpcache/": true,
+    ".lsp/": true,
+    ".shadow-cljs/": true,
+    "node_modules/": false
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  // https://github.com/prettier/prettier-vscode#prettierconfigpath
+  "prettier.configPath": "config/prettier.cjs",
+  "prettier.requireConfig": true
 }
