add :dev alias for devtools and re-frame-10x

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
     ".clj-kondo/": true,
     ".cpcache/": true,
     ".lsp/": true,
-    ".shadow-cljs/": true,
+    ".shadow-cljs/": false,
     "node_modules/": false
   },
   "[javascript]": {
